Aula de Angular 11 e 12

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "directivas"
+    }
+  },
+  "defaultProject": "directivas",
+  "cli": {
+    "analytics": "418323ac-68ae-4e02-82a3-250af037f0ee"
+  }
 }
